# saltyrtc-client-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.cargo/: audit.toml
.circleci/: config.yml
examples/: client.rs  example.rs  initiator.rs  wstest.rs
examples/chat/: chat_task.rs  main.rs
ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  meson.build  saltyrtc_client_ffi.h
ffi/src/: lib.rs
ffi/tests/: integration.rs  tests.c
fuzz/: Cargo.toml
fuzz/fuzz_targets/: nonce_parse.rs
src/: boxes.rs  close_code.rs  crypto.rs  crypto_types.rs  csn.rs  errors.rs  events.rs  helpers.rs  keystore.rs  lib.rs  messages.rs  nonce.rs  protocol.rs  send_all.rs  task.rs  tasks.rs  test_helpers.rs
src/protocol/: context.rs  cookie.rs  csn.rs  messages.rs  mod.rs  new.rs  nonce.rs  send_error.rs  state.rs  types.rs
src/protocol/tests/: mod.rs  signaling_messages.rs  validate_nonce.rs
tests/: integration.rs
