[package]
name = "saltyrtc-client"
version = "0.5.0-beta.3"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
documentation = "https://docs.rs/saltyrtc-client"
repository = "https://github.com/saltyrtc/saltyrtc-client-rs"
license = "MIT OR Apache-2.0"
description = "Asynchronous SaltyRTC client implementation for Rust 1.26+."
readme = "README.md"
keywords = ["saltyrtc", "end-to-end", "e2e", "signaling"]
categories = ["network-programming"]

[badges]
circle-ci = { repository = "saltyrtc/saltyrtc-client-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
byteorder = "1.1"
data-encoding = "2.0.0-rc.2"
failure = "0.1.1"
futures = "0.1.0"  # Make sure to use same version as websocket
log = "0.4.0-rc.1"
mopa = "0.2"
native-tls = "0.1.4"
rmp-serde = "0.13"
rmpv = { version = "0.4", features = ["with-serde"] }
rust_sodium-sys = { version = "0.9.0" }
rust_sodium = { version = "0.9.0" }
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1.9"
tokio-timer = "0.1"
websocket = "0.20"

[dev-dependencies]
clap = "2.27"
cursive = "0.8"
log4rs = "0.8"

[features]
default = []
msgpack-debugging = []
