[package]
name = "saltyrtc-client"
version = "0.6.0"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]
documentation = "https://docs.rs/saltyrtc-client"
repository = "https://github.com/saltyrtc/saltyrtc-client-rs"
license = "MIT OR Apache-2.0"
description = "Asynchronous SaltyRTC client implementation for Rust 1.36+."
readme = "README.md"
keywords = ["saltyrtc", "end-to-end", "e2e", "signaling"]
categories = ["network-programming"]
edition = "2018"

[badges]
circle-ci = { repository = "saltyrtc/saltyrtc-client-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
byteorder = "1.1"
data-encoding = "2.1"
failure = "0.1"
futures = "0.1.0"  # Make sure to use same version as websocket
log = "0.4"
mopa = "0.2"
native-tls = "0.2"
rmp-serde = "0.13"
rmpv = { version = "0.4", features = ["with-serde"] }
rust_sodium-sys = "0.10.4"
rust_sodium = "0.10.2"
serde = { version = "1", features = ["derive"] }
tokio-core = "0.1"
tokio-timer = "0.1"
websocket = "0.21"

[dev-dependencies]
clap = "2"
cursive = { git = "https://github.com/gyscos/cursive", branch = "master" }
log4rs = "0.8"

[features]
default = []
msgpack-debugging = []
