[package]
name = "saltyrtc-client"
version = "0.8.0"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]
documentation = "https://docs.rs/saltyrtc-client"
repository = "https://github.com/saltyrtc/saltyrtc-client-rs"
license = "MIT OR Apache-2.0"
description = "Asynchronous SaltyRTC client implementation for Rust."
readme = "README.md"
keywords = ["saltyrtc", "end-to-end", "e2e", "signaling"]
categories = ["network-programming"]
edition = "2018"

[badges]
circle-ci = { repository = "saltyrtc/saltyrtc-client-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
byteorder = "1.1"
crypto_box = { version = "0.7.1", features = ["serde"] }
data-encoding = "2.1"
failure = "0.1"
futures = "0.1.0"  # Make sure to use same version as websocket
log = "0.4"
mopa = "0.2"
native-tls = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
rmp-serde = "0.13"
rmpv = { version = "0.4", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
tokio-core = "0.1"
tokio-timer = "0.1"
websocket = { version = "0.21", default-features = false, features = ["async", "async-ssl"] }
xsalsa20poly1305 = "0.8"

[dev-dependencies]
clap = "2"
cursive = "0.17"
log4rs = "0.8"

[features]
default = []
msgpack-debugging = []
