[package]
name = "saltyrtc-client-ffi"
version = "0.1.0"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]

[lib]
name = "saltyrtc_client_ffi"
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.4"
saltyrtc-client = { path = ".." }
tokio-core = "0.1"

[build-dependencies]
cbindgen = "0.4"

[dev-dependencies]
lazy_static = "1.0"