[package]
name = "saltyrtc-client-ffi"
version = "0.1.0"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]
edition = "2018"

[lib]
name = "saltyrtc_client_ffi"
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.4"
saltyrtc-client = { path = ".." }
tokio-core = "0.1"

[build-dependencies]
cbindgen = "0.6"

[dev-dependencies]
lazy_static = "1.0"

[patch.crates-io]
traitobject = { git = "https://github.com/philip-peterson/destructure_traitobject", rev = "d49b0af9087b3b7848d19d5baae43948ebc7fb9d" }
